/*
Copyright © 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbauth;

option go_package = "auth/proto/pbauth";

import "pbcommon/pbcommon.proto";

message AuthLoginReply{
  pbcommon.EnumCode code = 1;
  string token = 2;
}

/*
管理员后台登录
args: AdminLoginArgs
reply: pbcommon.CommonResult
*/
message AdminLoginArgs{
  string username = 1;
  string password = 2;
  string captchaId = 3;
  string captchaCode = 4;
}


/*
获取图片上传token
args: AdminLoginArgs
reply: pbcommon.CommonResult
*/
message WxLogin{
  string code = 1;
  string encryptedData = 2;
  string iv = 3;
  string rawData = 4;
  string signature = 5;
}

message WxLoginReply{
  string openid = 1;
}

message ParseTokenArgs {
  string token = 1;
}

message ParseTokenReply {
  pbcommon.EnumCode code = 1;
  string newToken = 2;
  int64 id = 3;
  int64 roleId = 4;
  int64 appId = 5;
}



service Auth {
  rpc AdminLogin(AdminLoginArgs) returns(AuthLoginReply){} // /v1/auth/adminLogin
/*
service internal use
*/
  rpc ParseToken(ParseTokenArgs) returns(ParseTokenReply){} // gateway => auth
}